--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "axios": "^0.19.2",
     "chart.js": "^2.9.3",
     "core-js": "^3.6.4",
+    "crypto-js": "^4.0.0",
+    "socket.io-client": "^2.3.0",
     "vue": "^2.6.11",
     "vue-chartjs": "^3.5.0",
     "vue-router": "^3.1.5",
